--- a/Bakery.csproj
+++ b/Bakery.csproj
@@ -151,6 +151,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NewOrderController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -173,6 +174,7 @@
     <Compile Include="Models\Employee.cs">
       <DependentUpon>BakeryModel1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\NewOrder.cs" />
     <Compile Include="Models\Person.cs">
       <DependentUpon>BakeryModel1.tt</DependentUpon>
     </Compile>
@@ -249,6 +251,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\NewOrder\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
